# OpenCmdAnywhere

./: .gitignore  CMakeLists.txt  README.md  cleanup_settings_registry.bat
OpenCmdAnywhere/: CMakeLists.txt  about_dialog.cpp  about_dialog.h  about_dialog.ui  core.cpp  core.h  executable_item_dialog.cpp  executable_item_dialog.h  executable_item_dialog.ui  hotkey_handler.cpp  hotkey_handler.h  keycombination_inputer.cpp  keycombination_inputer.h  language.cpp  language.h  main.cpp  open_cmd_anywhere.qrc  setting_dialog.cpp  setting_dialog.h  setting_dialog.ui  settings.cpp  settings.h  settings_manager.cpp  settings_manager.h  systemtray.cpp  systemtray.h  utility.cpp  utility.h
OpenCmdAnywhere/language/: en.json  languages.json  zh.json
cmake/: FetchGlobalHotkey.cmake
cmake/template/: config.h.in
